Updated about with info for multiple images tagging

--- a/public/about.html
+++ b/public/about.html
@@ -81,9 +81,13 @@
 
 <p>Nej, det behøver du ikke. Men hvis du gør, kan du holde overblik over hvor mange tags du har lavet. De vil stå i bunden af billedet.</p>
 
+<h2>Kan jeg opmærke flere billeder på én gang?</h2>
+<p>Ja. I dette Google-dokument kan du skrive start- og slut-id (som findes i hjemmesidens webadresse når du ser billederne), og angive hvad tag billederne skal have.</p>
+<p>Så bliver de manuelt tilføjet til billederne.</p>
+
 <h2>Er det DR's projekt?</h2>
 
-<p>Nej, det er det ikke. DR har stillet billederne til rådighed for alle, men DR har ikke noget med dette projekt at gøre.</p>
+<p>Nej, det er det ikke. Men DR Arkiv bakker aktivt op om projektet.</p>
 <p>Der er pt. ingen aftale med DR om at de vil benytte disse data, men håbet er, at DR vil benytte dataene når/hvis DR selv vil gøre deres billeder mere tilgængelige.</p>
 
 <h2>Status</h2>
