Updated about with info for multiple images tagging

--- a/public/about.html
+++ b/public/about.html
@@ -82,7 +82,7 @@
 <p>Nej, det behøver du ikke. Men hvis du gør, kan du holde overblik over hvor mange tags du har lavet. De vil stå i bunden af billedet.</p>
 
 <h2>Kan jeg opmærke flere billeder på én gang?</h2>
-<p>Ja. I dette Google-dokument kan du skrive start- og slut-id (som findes i hjemmesidens webadresse når du ser billederne), og angive hvad tag billederne skal have.</p>
+<p>Ja. I dette <a href="https://docs.google.com/spreadsheets/d/14vyzegYQK9AhkGo2BmZzkXSewzg1hddLShg4O8YD9YE/edit#gid=0">Google-dokument</a> kan du skrive start- og slut-id (som findes i hjemmesidens webadresse når du ser billederne), og angive hvad tag billederne skal have.</p>
 <p>Så bliver de manuelt tilføjet til billederne.</p>
 
 <h2>Er det DR's projekt?</h2>
