corrected Safari text issue

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,15 @@
 	#status {
 		margin: 10px 10px 10px;
 	}
+	input.taggd-item-input {
+		color:white;
+	}
+	.creative-commons-logo
+	{
+		float:right;
+		max-width:200px;
+		padding:5px;
+	}
 	.desc{
         /* background-color: #fff; */
     top: -22px;
@@ -180,9 +189,9 @@ visibility:hidden;
         </div>
       </div>
     </div>
-    <footer class="footer hidden-xs">
-<div class="col-md-1 col-md-offset-11"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img class="pull-right" alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"></a></div>
-    </footer>
+    <div class="creative-commons-logo">
+  		<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img class="pull-right" alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png"></a>
+	</div>
     </body>
 
     <script>
