displaying existing metadata and corrected download button

--- a/public/about.html
+++ b/public/about.html
@@ -90,12 +90,8 @@
 <p>Nej, det er det ikke. Men DR Arkiv bakker aktivt op om projektet.</p>
 <p>Der er pt. ingen aftale med DR om at de vil benytte disse data, men håbet er, at DR vil benytte dataene når/hvis DR selv vil gøre deres billeder mere tilgængelige.</p>
 
-<h2>Status</h2>
-
-<p>Der er pt. følgende problemer med siden:</p>
-<ul>
-  <li>Man kan ikke downloade billeder i fuld størrelse. Funktionaliteten følger senere.</li>
-</ul>
+<h2>Hvordan går det med opmærkningen?</h2>
+<p>Du kan til enhver tid se hvor mange billeder der er opmærket, og hvor mange tags der findes: Klik <a target="_blank" href="stats">her</a> for at få en live opdatering af opmærkningsarbejdet.</p>
 
 <h2>Hvad sker der med mit arbejde?</h2>
 <p>De tags du opretter, bliver stillet frit til rådighed med det samme. Det sker gennem et API (se nedenfor).</p>
