--- a/public/about.html
+++ b/public/about.html
@@ -95,12 +95,12 @@
 
 <h2>Hvad sker der med mit arbejde?</h2>
 <p>De tags du opretter, bliver stillet frit til rådighed med det samme. Det sker gennem et API (se nedenfor).</p>
-<p>Både DRs billeder og de genererede data er frit tilgængelige under Creative Commons-licensen CC BY-NC-SA. Læs mere om licensen <a target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">her</a></p>
+<p>Både DRs billeder og de genererede data er tilgængelige under Creative Commons-licensen CC BY-NC-SA. Læs mere om licensen <a target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">her</a></p>
 <p>&nbsp;</p>
 </div>
         <h1>Technical information (in english)</h1>
         <p>The project is hacked together at <a href="http://hack4.dk">#Hack4DK 2015</a>.</p>
-        <p>Based on <a href="http://hack4dk.dr.dk">open data</a> from the archives of DR.</p>
+        <p>Based on <a href="http://hack4dk.dr.dk">data</a> from the archives of DR.</p>
         <p>Source code at <a href="https://github.com/stumpdk/hack4dk_DR_images">Github</a></p>
         <p>Information at <a href="https://hackdash.org/projects/560eb91c28775a823ff1690b">Hackdash</a></p>
         <h3>API info</h3>
